--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.vteba</groupId>
             <artifactId>vteba-web</artifactId>
             <version>1.0.2</version>
